# IEEE2016

./: .gitignore  LICENSE  README.md
Simulator/: CMakeLists.txt  package.xml  readme.md  sim.py
Simulator/scripts/: arm_controller_test.py  arm_simulator.py  sim.py
Simulator/src/sim_tools/: text_box.py
Vision/: sampleLibrary.py
Vision/CameraCalibrations/: Camera1Calibration.txt  Camera2Calibration.txt
Vision/QR/: GenericCascade.py  ZBarImageReader.py  zbarInstallReadme.txt
Vision/QR/CascadeRC1/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml
Vision/colorDetection/: colorDetection.py
Vision/perspectiveMods/: Perspective_Correction.py
ieee2016_controller/: CMakeLists.txt  readme.md
ieee2016_controller/nodes/: arm_controller.py  mecanum_controller.py  vehicle_controller.py
ieee2016_launch/: package.xml
ieee2016_launch/launch/: arm_sim.launch
ros/edison/: CMakeLists.txt  package.xml
ros/edison/scripts/: edison_const.py  motor_controller.py  pid.py
ros/ieee2016_arm_control/: CMakeLists.txt  package.xml  setup.py
ros/ieee2016_arm_control/scripts/: arm_controller.py  calibration.yaml  dynamixel_movement.py  maestro.py  servo_calibration.py
ros/ieee2016_controller/: CMakeLists.txt  package.xml  readme.md
ros/ieee2016_controller/nodes/: mecanum_controller.py  vehicle_controller.py
ros/ieee2016_controller_ported/: CMakeLists.txt  package.xml
ros/ieee2016_diagnostics/: CMakeLists.txt  package.xml
ros/ieee2016_diagnostics_ported/: CMakeLists.txt  package.xml  readme.md
ros/ieee2016_diagnostics_ported/src/: LIDAR_distance.py
ros/ieee2016_launch/: CMakeLists.txt
ros/ieee2016_mission_planner/: CMakeLists.txt  package.xml  readme.md  setup.py
ros/ieee2016_mission_planner/launch/: master.launch
ros/ieee2016_mission_planner/scripts/: 1_waypoints.txt  2_waypoints.txt  __init__.py  block_manager.py  block_planner.py  kd_tree.py  main_control.py  point_cloud_gen.py  publish_waypoints.py  waypoint_utils.py  waypoints.txt
ros/ieee2016_msgs/: CMakeLists.txt  package.xml
ros/ieee2016_msgs/msg/: BlockStamped.msg  StartNavigation.msg  UltraSonicActivator.msg  UltraSonicStamped.msg
ros/ieee2016_msgs/srv/: ArmWaypoint.srv  CameraSet.srv  DynamixelControl.srv  LidarSelector.srv  NavWaypoint.srv  RequestMap.srv  ResetOdom.srv
ros/ieee2016_navigation/: CMakeLists.txt  package.xml  readme.md
ros/ieee2016_navigation/launch/: SLAM.launch  ekf_global.launch  ekf_local.launch  laser.launch  nav_dat_bitch.launch  navigation.launch
ros/ieee2016_navigation/scripts/: block_approach.py  laser_comb.py  laser_fuser.py  laser_trimmer.py  (+7 more)
ros/ieee2016_simulator/: CMakeLists.txt  package.xml
ros/ieee2016_simulator_new/: CMakeLists.txt  package.xml  setup.py
ros/ieee2016_tf_broadcaster/: CMakeLists.txt  package.xml
ros/ieee2016_vision/: CMakeLists.txt  color_calibrations.json  package.xml  setup.py
ros/ieee2016_vision/calibrations/: cam_1.yaml
ros/ieee2016_vision/launch/: camera_startup.launch  camera_startup_new.launch
ros/ieee2016_vision/scripts/: QR.py  QR_temp_caller.py  __init__.py  boxes.py  camera_manager.py  color_calibration.py  color_calibrations.json  color_calibrator.py  color_calibrator.ui  color_calibrator_gui.py  color_calibrator_gui.ui  color_detection.py  detect_blue_blocks.py  edgy.py  point_intersector.py  qr_detector.py  train_boxes.py  visual_servo.py
ros/ieee2016_vision/scripts/calibrations/: cam_1.yaml  cam_2.yaml  color_calibrations.yaml
ros/ieee2016_vision/scripts/calibrator/: __init__.py  calibrator.py  calibrator_gui.py  calibrator_gui.ui  camera.py  color_calibration.py  color_calibrations.yaml  detection.py
ros/ieee2016_vision/scripts/color/: camera_stream.py  color_calibration.py  color_calibrations.yaml  color_calibrator.py  color_calibrator_gui.py  color_calibrator_gui.ui  color_detection.py  color_detection_testing.py
ros/ieee2016_xmega_connector/: CMakeLists.txt  package.xml
ros/ieee2016_xmega_connector_ported/: CMakeLists.txt  package.xml
ros/ieee2016_xmega_connector_ported/launch/: xmega_connector.launch
ros/ieee2016_xmega_connector_ported/scripts/: calibration.yaml  xmega_connector_publisher.py
ros/ieee2016_xmega_connector_ported/srv/: GetHeading.srv
udev/: 47-hokuyo.rules  98-ftdi.rules  99-cameras.rules  99-cameras.rules.bak  readme.md  setup.sh
xmega/: hmc5883l.cpp  main.cpp  uart.cpp
xmega/IEEE2016/: IEEE2016.atsln  IEEE2016.atsuo
(+39 files in other folders)
