<?xml version="1.0"?>
<package>
  <name>ieee2016_launch</name>
  <version>0.0.0</version>
  <description>The ieee2016_launch package</description>
  <maintainer email="lbassettaudain@ufl.edu">Lucas Bassett-Audain</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
