<?xml version="1.0"?>
<package>
  <name>ieee2016_mission_planner</name>
  <version>0.0.0</version>
  <description>The ieee2016_mission_planner package</description>

  <maintainer email="matt@todo.todo">matt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
