<?xml version="1.0"?>
<package>
  <name>ieee2016_vision</name>
  <version>0.0.0</version>
  <description>The ieee2016_vision package</description>

  <maintainer email="matt@todo.todo">matt</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
